add integration test setup to jdt tests plugin